# OMFMISimulator

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  buildWinVS14.bat  configWinVS14.bat
cmake/: FindFMILibrary.cmake
config.cmake/: DownloadCeres.txt.in  FindCVODELibrary.cmake  FindFMILibrary.cmake  FindKINSOLLibrary.cmake  FindLUALibrary.cmake
simulator/: CMakeLists.txt  Makefile  main.cpp
src/OMFitLib/: CMakeLists.txt  FitModel.cpp
src/OMFitLua/: CMakeLists.txt  OMFitLua.c
src/OMSimulator/: CMakeLists.txt  Options.cpp  Options.h  main.cpp
src/OMSimulatorLib/: CMakeLists.txt  CSVReader.cpp  CSVResultFile.cpp  CSVResultFile.h  CSVWriter.cpp  Clock.h  Clocks.cpp  Clocks.h  CompositeModel.cpp  CompositeModel.h  DirectedGraph.cpp  DirectedGraph.h  FMUWrapper.cpp  FMUWrapper.h  GlobalSettings.cpp  Logging.cpp  Logging.h  MATResultFile.cpp  MATResultFile.h  MatReader.cpp  MatReader.h  MatVer4.cpp  MatVer4.h  MatVer4Writer.cpp  MatVer4Writer.h  OMSimulator.cpp  OMSimulator.h  ResultFile.cpp  ResultFile.h  Resultfile.cpp  Resultfile.h  Settings.cpp  Settings.h  Types.h  Util.h  Variable.cpp  Variable.h  oms_fmu.cpp  oms_fmu.h  oms_logging.cpp  (+6 more)
src/OMSimulatorLua/: CMakeLists.txt  OMSimulatorLua.c
src/OMSimulatorModelica/: .gitignore  CMakeLists.txt
src/OMSimulatorModelica/OMSimulator/: Examples.mo  OMS.mo  OMSModel.mo  package.mo  package.order
src/lua/: CMakeLists.txt  luaOMSimulator.c
